--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -49,7 +49,7 @@
 .search-icon{
     height: 20px;
 }
-.login-btn > button{
+.right-menu > button{
     height: 36px;
     width: 100px;
     color: blue;
@@ -59,6 +59,30 @@
 .icon{
     color: white;
 }
+.dropdown-menu{
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    z-index: 1;
+}
+.dropdown-menu a{
+    color: black;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-menu li{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.dropdown-menu a:hover{
+    background-color: #000;
+    color: #fff;
+}
+.right-menu:hover .dropdown-menu{
+    display: block;
+}
 @media only screen and (max-width: 600px) and (min-width: 400px) {
     .main-nav{
         flex-direction: column;
@@ -66,7 +90,7 @@
     .menu-link >ul{
         flex-direction: column;
     }
-    .login-btn > button{
+    .right-menu > button{
         margin-top: 10px;
     }
 }
