--- a/src/Components/Products.css
+++ b/src/Components/Products.css
@@ -10,10 +10,37 @@
     height: 70px;
     width: 100px;
 }
+.products > div {
+    text-align: center;
+}
 .products > div > p{
     font-size: 14px;
     font-weight: bold;
+    
 }
 .products > div > p:hover{
     color: blue;
+}
+.dropdown-menu{
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    z-index: 1;
+}
+.dropdown-menu a{
+    color: black;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-menu a:hover{
+    background-color: #000;
+    color: #fff;
+}
+.right-menu1:hover .dropdown-menu{
+    display: block;
+    border: 1px solid black;
+    width: 150px;
+}
+.down{
+    align-items: center;
 }
